k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-spring-create-deployment
  namespace: p-spring-create
  labels:
    app: p-spring-create
    workload: create
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p-spring-create
  template:
    metadata:
      labels:
        app: p-spring-create
    spec:
      containers:
        - name: p-spring-create-container
          image: ghcr.io/angie-diaz-1/p-spring-create:latest@sha256:402d8691276be7eac0d811f563d32bc339465b1dd62bd37d09bcc7c11b6dc6e8
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: mongo-data
              mountPath: /data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: p-spring-create-pvc
      imagePullSecrets:
        - name: ghcr-secret
