k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: p-spring-create-pod
  namespace: p-spring-create
  labels:
    app: p-spring-create
spec:
  containers:
    - name: p-spring-create-container
      image: ghcr.io/angie-diaz-1/p-spring-create:latest@sha256:402d8691276be7eac0d811f563d32bc339465b1dd62bd37d09bcc7c11b6dc6e8
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: mariadb-data
          mountPath: /data
  volumes:
    - name: mariadb-data
      persistentVolumeClaim:
        claimName: mariadb-pvc
  imagePullSecrets:
    - name: ghcr-secret
