k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p-spring-create-ingress
  namespace: p-spring-create
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/productos/crear
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /spring-crear
            pathType: ImplementationSpecific
            backend:
              service:
                name: p-spring-create-service
                port:
                  number: 8080
